--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22fxEVGhbc%22%7D",
+        "value": "%7B%2261564107626890%22%3A%22OHUPg5pV%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.639Z",
-        "lastAccessed": "2024-08-08T14:47:59.639Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.639Z",
-        "lastAccessed": "2024-08-08T14:47:59.639Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "sb",
@@ -23,35 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.639Z",
-        "lastAccessed": "2024-08-08T14:47:59.639Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61564107626890",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.639Z",
-        "lastAccessed": "2024-08-08T14:47:59.639Z"
-    },
-    {
-        "key": "fr",
-        "value": "0rdvyIu9bJ9t7XPsu.AWW5j6Jpz2zt7eZmZC5bD7f9l1g.BmtNaM..AAA.0.0.BmtNbQ.AWUZSM9iUWk",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.639Z",
-        "lastAccessed": "2024-08-08T14:47:59.639Z"
-    },
-    {
-        "key": "xs",
-        "value": "38%3Ay4gmLevXN3fs0w%3A2%3A1723127505%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "locale",
@@ -59,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "vpd",
@@ -68,26 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723128151",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100738303%3BT%3A28718802",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "ps_l",
@@ -95,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "ps_n",
@@ -104,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "dpr",
@@ -113,25 +68,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
         "key": "wd",
-        "value": "1782x3292",
+        "value": "720x1329",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22lm3%22%3A%22g.7520677604711022%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723128454775%2C%22v%22%3A1%7D",
+        "key": "c_user",
+        "value": "61564107626890",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T14:47:59.640Z",
-        "lastAccessed": "2024-08-08T14:47:59.640Z"
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
+    },
+    {
+        "key": "fr",
+        "value": "0rdvyIu9bJ9t7XPsu.AWVUwOvYCFLRzAQJ8ZPeE5tIVYE.BmtNaM..AAA.0.0.BmtPtZ.AWUiHojJtqY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
+    },
+    {
+        "key": "xs",
+        "value": "22%3AnMJOcg8iihGU-Q%3A2%3A1723136857%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723136887",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101330735%3BT%3A28718948",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-08T17:08:17.685Z",
+        "lastAccessed": "2024-08-08T17:08:17.685Z"
     }
 ]
