--- a/appstate.json
+++ b/appstate.json
@@ -1,57 +1,21 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22hlW4Ojcr%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%2C%22100095349618966%22%3A%22br7FhcBg%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.732Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
-    },
-    {
-        "key": "datr",
-        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
         "key": "sb",
-        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
         "key": "ps_n",
@@ -59,79 +23,133 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
         "key": "dpr",
-        "value": "1.6497068405151367",
+        "value": "2.7737884521484375",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
+        "key": "vpd",
+        "value": "v1%3B708x360x2.518298864364624",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
-        "key": "wd",
-        "value": "720x1329",
+        "key": "datr",
+        "value": "W1WnZvgZez30YpN2LMPXXIe1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
+    },
+    {
+        "key": "locale",
+        "value": "pa_IN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
         "key": "c_user",
-        "value": "61564107626890",
+        "value": "61562963472651",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
-    },
-    {
-        "key": "fr",
-        "value": "0rdvyIu9bJ9t7XPsu.AWVQhJGLRTIu6TRc7crP_k8qPHc.BmtNaM..AAA.0.0.BmtRNB.AWUEbRTaEpk",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
         "key": "xs",
-        "value": "22%3AZnNzfYaGAzmxxA%3A2%3A1723142978%3A-1%3A-1",
+        "value": "3%3A83MesNjWUsbJ1g%3A2%3A1723178236%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723143526",
+        "key": "fr",
+        "value": "1lGW4rgYOa4ruQMAE.AWUAAzHf0eaccapFji5j9HHXKoI.BmtQoC..AAA.0.0.BmtZ0J.AWXw3jnzaew",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723178270479%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     },
     {
         "key": "fbl_st",
-        "value": "101337834%3BT%3A28719058",
+        "value": "101028443%3BT%3A28719638",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-08T18:59:09.733Z",
-        "lastAccessed": "2024-08-08T18:59:09.733Z"
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2584%3Btimestamp%3A1723178283",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "61562963472651",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.7737884521484375",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x804",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-09T04:38:13.587Z",
+        "lastAccessed": "2024-08-09T04:38:13.587Z"
     }
 ]
